[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/control/Settings.gd" type="Script" id=1]
[ext_resource path="res://resources/DynamicFonts/menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/crosshairs64.png" type="Texture" id=3]
[ext_resource path="res://resources/DynamicFonts/buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/Buttons/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://resources/Buttons/button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://resources/Buttons/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/control/CrosshairSub.gd" type="Script" id=8]
[ext_resource path="res://resources/Panels/panel.tres" type="StyleBox" id=9]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=12]




[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0941176, 0.109804, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 384.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.2, 0.2, 0.2, 1 )
text = "SETTINGS
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameSub" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0001
margin_right = 259.0
margin_bottom = 32.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerNameSub"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "PLAYER NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PlayerNameSub"]
margin_top = 40.0
margin_right = 259.0
margin_bottom = 64.0
custom_styles/normal = ExtResource( 5 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="."]
anchor_left = 0.839844
anchor_top = 0.476667
anchor_right = 1.0
anchor_bottom = 0.523333
custom_fonts/font = ExtResource( 4 )
text = "FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox4" type="CheckBox" parent="."]
anchor_left = 0.839844
anchor_top = 0.436667
anchor_right = 0.999023
anchor_bottom = 0.483333
custom_fonts/font = ExtResource( 4 )
text = "SHOW FPS"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox5" type="CheckBox" parent="."]
anchor_left = 0.839844
anchor_top = 0.398333
anchor_right = 1.0
anchor_bottom = 0.445
custom_fonts/font = ExtResource( 4 )
text = "FLIP GUNS"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_left = 0.727
anchor_top = 0.128071
anchor_right = 0.966797
anchor_bottom = 0.128071
margin_left = -0.447998
margin_bottom = 159.0
custom_styles/panel = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
items = [ "1920x1080", null, 2, true, false, 1, 0, null, "", false, "1600x900", null, 2, false, false, 1, 0, null, "", false, "1366x768", null, 2, false, false, 2, 0, null, "", false, "800x600", null, 2, false, false, 3, 0, null, "", false, "640x480", null, 2, false, false, 4, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InvertCameraSub" type="Panel" parent="."]
anchor_top = 0.136667
anchor_bottom = 0.283
margin_right = 186.0
margin_bottom = 0.199783
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox" type="CheckBox" parent="InvertCameraSub"]
margin_left = -1.0
margin_top = 34.0
margin_right = 186.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = " INVERT X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="InvertCameraSub"]
margin_left = -1.0
margin_top = 63.0
margin_right = 186.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 4 )
text = " INVERT Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InvertCameraSub"]
margin_left = 9.28534
margin_top = -2.86102e-06
margin_right = 316.285
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "INVERT CAMERA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrosshairSub" type="Panel" parent="."]
anchor_top = 0.581667
anchor_bottom = 0.71
margin_right = 159.0
margin_bottom = -3.05176e-05
custom_styles/panel = ExtResource( 9 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Crosshair" type="Sprite" parent="CrosshairSub"]
position = Vector2( 30.9733, 40.6334 )
texture = ExtResource( 3 )
vframes = 8
hframes = 8

[node name="Button" type="Button" parent="CrosshairSub"]
margin_left = 62.9733
margin_top = 34.731
margin_right = 87.9733
margin_bottom = 58.731
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CrosshairSub"]
margin_left = 101.82
margin_top = 34.731
margin_right = 126.82
margin_bottom = 58.731
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CrosshairSub"]
margin_left = 9.28534
margin_top = 3.33786e-06
margin_right = 231.285
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "CROSSHAIR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FovSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -123.052
margin_right = 354.0
margin_bottom = -107.052
min_value = 50.0
max_value = 150.0
step = 10.0
value = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FovSlider"]
margin_top = -32.0
margin_right = 407.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 4 )
text = "FOV"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FovEdit" type="LineEdit" parent="FovSlider"]
margin_left = 349.0
margin_top = -7.0
margin_right = 407.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseSenseSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -54.0
margin_right = 354.0
margin_bottom = -38.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MouseSenseSlider"]
margin_top = -32.0
margin_right = 407.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 4 )
text = "MOUSE SENSITIVITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MouseSenseSlider"]
margin_left = 349.0
margin_top = -7.0
margin_right = 407.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" parent="." instance=ExtResource( 12 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -279.941
margin_top = 19.8425
margin_right = -36.9409
margin_bottom = 76.8425
text = "RESOLUTION"

[node name="Save" parent="." instance=ExtResource( 12 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -75.0
margin_right = -37.0
margin_bottom = -32.0
text = "SAVE"

[node name="Back" parent="." instance=ExtResource( 12 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -130.052
margin_right = -37.0
margin_bottom = -87.052
text = "BACK"
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="CrosshairSub/Button" to="CrosshairSub" method="_on_Button_pressed"]
[connection signal="pressed" from="CrosshairSub/Button2" to="CrosshairSub" method="_on_Button2_pressed"]
[connection signal="value_changed" from="FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="text_entered" from="FovSlider/FovEdit" to="." method="_on_FovEdit_text_entered"]
[connection signal="value_changed" from="MouseSenseSlider" to="." method="_on_MouseSenseSlider_value_changed"]
[connection signal="text_entered" from="MouseSenseSlider/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Resolution" to="." method="_on_Resolution_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
